# src/services/handlers.ts
@@ -1,10 +1,21 @@
 import { IParser } from "@adapters/parser";
-import { CheckElfDuties, Command, MoveCrates, ParseMessage } from "@domain/commands";
+import { CheckElfDuties, CheckElfSupplies, Command, MoveCrates, ParseMessage } from "@domain/commands";
 import { Device } from "@domain/device";
 import { ElfDuties } from "@domain/elfduty";
 import { Stack, Transaction, WareHouse } from "@domain/stack";
+import { ElfSupply } from "@domain/supplies";
 
-class Services {
+export class Services {
+    public static checkElfSupplies(command: Command, parser: IParser): number {
+        const result = parser.parse(command.stream, "ELFSUPPLY");
+        const sortedElves = (result.elfSupplies as Array<ElfSupply>).sort((a, b) => b.calories - a.calories);
+        let calories = 0;
+        for(let e=0;e<(command as CheckElfSupplies).numberOfElves;e++){
+            calories += sortedElves[e].calories;
+        }
+        return calories;
+    }
+
     public static checkElfDuties(command: Command, parser: IParser): number {
         const result = parser.parse(command.stream, "ELFDUTY");
         return ElfDuties.countOverlapDuties(result.elfDuties as Array<Array<number>>, (command as CheckElfDuties).fullyOverlap)
@@ -26,6 +37,7 @@ class Services {
 export type Handler = (command: Command, parser: IParser) => string | number;
 
 export const HANDLERS: { [key: string]: Handler } = {
+    "CheckElfSupplies": Services.checkElfSupplies,
     "CheckElfDuties": Services.checkElfDuties,
     "MoveCrates": Services.moveCrates,
     "ParseMessage": Services.parseMessage
